# codestrain

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml  ideas.txt
.sqlx/: query-071bf57851bf59536a9deb824c538a6b04cb8f6ae34dfc2f07eef88255f36098.json  query-0e0aad1a2a7c32d67337fd8a777f1701a08259933777e678e6c510ff70b9383b.json  query-104141bb665805aeee76042748f83b3c6f28f993ce7746072b60dd93cdbf7576.json  query-20ab53e027e9ccb6e0da275a69ff2e323094ca7d270eef9b6d40d437a7502a33.json  query-32c4ac9d98e394d86bad5b4643e0f9fd572f1f81d48e9fa57f2a24d3d7a0b029.json  query-33ac887e48cad6925f28543628f13caef869f0debfd941890b2b96be466ab6cd.json  query-61c3441f2645412e30e8cd04a82faec730f814405e2e84bc829ace1e95f2f469.json  query-648287d30c965d5cf334a7b4d0e3b2cbaadccc23a8d9246e0fe5eb92fbacd46e.json  query-65063698b9cdf68dd97ccf55b49e9ce37e49ad9eb1acfd78520489c95731f4d1.json  query-76c1641015536458f64dec50db2b56ef778a598a9b976f8c217d27e7b041aaf7.json  query-8a09081345dd99bf18d61da1fd1f8ce19c638ca88d574090a203aa96f9c75422.json  query-8c8a2b5b8e5dfa7f8b6d0e401541f2e925ccde198ba92113ae992d6f0d6af1d6.json  query-974be2a2f68bb100373a4979841914502421491f8ca5c182b982766d923d7c34.json  query-bdd450efdcfaf6c3eeab6a6fe7870c8e1270578868836d799479268c1b4f07b7.json  query-c05aa60c9add9e9aca97808ad852fc808a7eba38d30b63d600f9f72bb4d0dd60.json  query-c9b9651ae9ecb38bb6c98f45cf0b304e3f29ee8b8189fda347bf1cc585e795c7.json  query-ca45e9faf3d054d53338ebe170a8e98ca2355b7f49e9a6fc2dd8e5d00b8d8b90.json  query-dc523f26b1b129c99b085b1199d6229dea95d7a200f77f451372331aed740782.json  (+3 more)
codestrain-common/: Cargo.toml
codestrain-server/: Cargo.toml
codestrain-server/migrations/: 20231231163039_base.down.sql  20231231163039_base.up.sql  20231231211436_sessions.down.sql  20231231211436_sessions.up.sql  20240101173449_arena.down.sql  20240101173449_arena.up.sql
codestrain-server/src/: main.rs
(+38 files in other folders)
