[package]
name = "codestrain-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
extism = "^1.0.0-rc3"
rocket = "0.5"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
